# FreeFlow

./: CMakeLists.txt
UserInput/: 1D_Uniform.geo  5deg.geo  5deg.msh  Setup.ff  bump.geo  bump.msh  planar.geo  planar.msh  sod_200.geo  sod_200.msh  test.geo  test.msh  test_periodic.geo  test_periodic.msh  test_periodic_100.geo  test_periodic_100.msh  test_periodic_200.geo  test_periodic_200.msh  test_periodic_5.geo  test_periodic_5.msh  test_periodic_50.msh
src/: FreeFlow.cpp
src/Mesh/: MeshHandler.cpp  MeshHandler.h
src/Schemes/: Interpolator.cpp  Interpolator.h  SSPRK.cpp  SSPRK.h
src/Solver/: FiniteVolume.cpp  FiniteVolume.h
src/System/: NS.cpp  NS.h  VarName.h  k_Omega.cpp  k_Omega.h
src/include/: CoordinateSystems.h  Data.h  EigenType.h
